fixed table css

--- a/public/app/transactions/transaction-list.component.html
+++ b/public/app/transactions/transaction-list.component.html
@@ -54,12 +54,12 @@
                 <table class="table table-condensed table-hover">
                     <thead>
                     <tr>
-                        <th class="text-nowrap col-sm-1">-</th>
-                        <th class="text-nowrap col-sm-1">Date</th>
-                        <th class="text-nowrap col-sm-4">Description</th>
-                        <th class="text-nowrap col-sm-2">Categories</th>
-                        <th class="text-nowrap col-sm-1">Account</th>
-                        <th class="text-nowrap col-sm-1">Amount</th>
+                        <th class="text-nowrap">-</th>
+                        <th class="text-nowrap">Date</th>
+                        <th class="text-nowrap col-sm-12">Description</th>
+                        <th class="text-nowrap">Categories</th>
+                        <th class="text-nowrap">Account</th>
+                        <th class="text-nowrap">Amount</th>
                         <th class="text-nowrap"></th>
                     </tr>
                     </thead>
