--- a/public/app/transactions/transaction.component.html
+++ b/public/app/transactions/transaction.component.html
@@ -1,6 +1,6 @@
 <template [ngIf]="!editing">
     <td>
-        <transaction-control (addCategory)="addCat($event)" (remCategory)="remCat($event)"></transaction-control>
+        <transaction-control (addCategory)="addCat($event)" (remCategory)="remCat($event)" (setSelection)="setSelection($event)"></transaction-control>
         <input type="checkbox" [(ngModel)]="selected">
     </td>
     <td class="text-nowrap" style="padding-left: 10px;padding-right: 10px">{{tnx.date | date: 'yyyy'}}-{{tnx.date |
