--- a/public/app/login/login.component.html
+++ b/public/app/login/login.component.html
@@ -1,9 +1,8 @@
 <div>
-    <user-model #userModel></user-model>
-    <!--<input type="text" placeholder="username" [(ngModel)]="username">-->
-    <!--<input type="password" placeholder="password" [(ngModel)]="password">-->
-    <a class="form-control btn-primary" href="/auth/google">Login with Google</a>
-    <!--<button type="button" (click)="userModel.login(username,password)"> Login</button>-->
+    <user-model #userModel [(user)]="user"></user-model>
+    <div>Hello {{user.username}}!</div>
+    <div>Hello {{ userModel.userChange|async|json}}!</div>
+    <a href="/auth/google">Login with Google</a>
     <button type="button" (click)="userModel.logout()">Logout</button>
     <button type="button" (click)="userModel.refresh()">Refresh</button>
 </div>
