added support for update

--- a/public/app/category/category-input.component.html
+++ b/public/app/category/category-input.component.html
@@ -1,5 +1,7 @@
 <div>
-    <input type="text" placeholder="name" [(ngModel)]="name" (keyup.enter)="save(name,pId)"/>
-    <input type="text" placeholder="parentId" [(ngModel)]="pId" (keyup.enter)="save(name,pId)"/>
-    <button type="button" (click)="save(name,pId)">Save</button>
+    <input type="text" placeholder="name" [(ngModel)]="cat.shortName" (keyup.enter)="save(cat)"/>
+    <input type="text" placeholder="parentId" [(ngModel)]="cat.parentId" (keyup.enter)="save(cat)"/>
+    <button type="button" (click)="save(cat)">Save</button>
+    <button type="button" (click)="update(cat)">Update</button>
+    <button type="button" (click)="reset()">Reset</button>
 </div>
