--- a/public/app/category/category-list.component.html
+++ b/public/app/category/category-list.component.html
@@ -1,11 +1,13 @@
 <div>
     <category-relay #relay [(categories)]="categories"></category-relay>
+    <action-relay #action></action-relay>
     <div>
         <button type="button" (click)="relay.refresh()">Refresh</button>
     </div>
     <div>
         <div *ngFor="let c of categories">
             <button type="button" (click)="relay.removeId(c.id())">x</button>
+            <button type="button" (click)="action.relay.category.edit(c)">edit</button>
             <span>{{c.id()}} - {{c.shortName}} - {{c.name}}</span>
         </div>
     </div>
