--- a/public/app/login/login.component.html
+++ b/public/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div>
-    <user-model #userModel [(user)]="user"></user-model>
+    <user-model #userModel (user)="user=$event"></user-model>
     <div>Hello {{user.username}}!</div>
     <a href="/auth/google">Login with Google</a>
     <button type="button" (click)="userModel.logout()">Logout</button>
