--- a/public/app/transaction/transaction-list.component.html
+++ b/public/app/transaction/transaction-list.component.html
@@ -1,11 +1,20 @@
 <div>
+    <transaction-relay #relay
+                       (transactions)="transactions=$event"
+                       [filter]="filter"></transaction-relay>
+    <action-relay #mainAction></action-relay>
+
     <label>Page</label>
     <input type="text" [(ngModel)]="filter.page"/>
     <label>Limit</label>
     <input type="text" [(ngModel)]="filter.limit"/>
     <button type="button" (click)="relay.sendFilter()">Set</button>
-    <transaction-relay #relay (transactions)="transactions=$event" [filter]="filter"></transaction-relay>
-    <action-relay #mainAction></action-relay>
+
+    <transaction-filter
+            [(account)]="filter.account"
+            [(description)]="filter.description"
+            [(category)]="filter.category"
+            (filtered)="relay.sendFilter()"></transaction-filter>
     <div>
         <input #mainCb type="checkbox"
                (click)="mainAction.relay.setAllSelection(mainCb.checked)">
