--- a/public/app/transaction/transaction-filter.component.html
+++ b/public/app/transaction/transaction-filter.component.html
@@ -1,13 +1,16 @@
 <div>
     <label>Account</label>
     <input type="text" [(ngModel)]="account"
-           (ngModelChange)="accountChange.emit($event)"/>
+           (ngModelChange)="accountChange.emit($event)"
+           (keyup.enter)="filtered.emit(null)"/>
     <label>Description</label>
     <input type="text" [(ngModel)]="description"
-           (ngModelChange)="descriptionChange.emit($event)"/>
+           (ngModelChange)="descriptionChange.emit($event)"
+           (keyup.enter)="filtered.emit(null)"/>
     <label>Category</label>
     <input type="text" [(ngModel)]="category"
-           (ngModelChange)="categoryChange.emit($event)"/>
+           (ngModelChange)="categoryChange.emit($event)"
+           (keyup.enter)="filtered.emit(null)"/>
     <button type="button" (click)="categoryChange.emit(null)">X</button>
     <button type="button" (click)="filtered.emit(null)">Filter</button>
     cat:{{category|json}}
