--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -18,6 +18,7 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
+                <li routerLinkActive="active"><a routerLink="/main/login">Login</a></li>
                 <li routerLinkActive="active"><a routerLink="/main/accounts">Accounts</a></li>
                 <li routerLinkActive="active"><a routerLink="/main/categories">Categories</a></li>
                 <li routerLinkActive="active"><a routerLink="/main/transactions">Transactions</a></li>
