--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -18,11 +18,12 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li routerLinkActive="active"><a routerLink="/main/login">Login</a></li>
-                <li routerLinkActive="active"><a routerLink="/main/accounts">Accounts</a></li>
-                <li routerLinkActive="active"><a routerLink="/main/categories">Categories</a></li>
-                <li routerLinkActive="active"><a routerLink="/main/transactions">Transactions</a></li>
-                <!--<li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>-->
+                <li routerLinkActive="active"><a class="nav-item nav-link" routerLink="/main/login">Login</a></li>
+                <li routerLinkActive="active"><a class="nav-item nav-link" routerLink="/main/accounts">Accounts</a></li>
+                <li routerLinkActive="active"><a class="nav-item nav-link" routerLink="/main/categories">Categories</a>
+                </li>
+                <li routerLinkActive="active"><a class="nav-item nav-link"
+                                                 routerLink="/main/transactions">Transactions</a></li>
             </ul>
         </div>
         <div class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
