fixed routing on main page

--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -12,7 +12,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-3 sidebar h-100">
+    <div class="col-sm-3 col-md-3 col-lg-2 col-xl-2 sidebar h-100">
       <nav class="nav nav-pills nav-stacked">
         <a class="nav-link" routerLinkActive="active" routerLink="/main/login">Login</a>
         <a class="nav-link" routerLinkActive="active" routerLink="/main/accounts">Accounts</a>
@@ -20,7 +20,7 @@
         <a class="nav-link" routerLinkActive="active" routerLink="/main/transactions">Transactions</a>
       </nav>
     </div>
-    <div class="col-sm-9">
+    <div class="col-sm-9 col-md-9 col-lg-10 col-xl-10">
       <router-outlet></router-outlet>
     </div>
   </div>
