--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-faded" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-light bg-faded" style="background-color: #dbe5eb;">
   <div class="nav navbar-nav">
     <a class="navbar-brand" href="#">Expense manager</a>
     <div class="nav-item">
@@ -20,7 +20,7 @@
         <a class="nav-link" routerLinkActive="active" routerLink="/main/transactions">Transactions</a>
       </nav>
     </div>
-    <div class="col-sm-9 col-md-9 col-lg-10 col-xl-10">
+    <div class="col-sm-9 col-md-9 col-lg-10 col-xl-10 main">
       <router-outlet></router-outlet>
     </div>
   </div>
