--- a/public/app/account/account-input.component.html
+++ b/public/app/account/account-input.component.html
@@ -1,5 +1,28 @@
-<div>
-  <account-relay #relay></account-relay>
-  <input type="text" [(ngModel)]="name" (keyup.enter)="save(name)"/>
-  <button type="button" (click)="save(name)">Save</button>
+<account-relay #relay></account-relay>
+<div class="card card-block">
+  <form class="form-inline">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control form-control-sm" id="name" name="name"
+             [(ngModel)]="name" (keyup.enter)="save(name)">
+    </div>
+    <div class="form-group">
+      <label for="inBal">Initial balance</label>
+      <input type="text" class="form-control form-control-sm" id="inBal" size="10">
+    </div>
+    <div class="form-group">
+      <label for="ccy">Currency</label>
+      <input type="text" class="form-control form-control-sm" id="ccy" size="5">
+    </div>
+    <div class="form-group">
+      <label for="decimal">Decimal places</label>
+      <input type="text" class="form-control form-control-sm" id="decimal" size="6">
+    </div>
+    <div class="form-group">
+      <label>&nbsp;</label>
+      <button class="btn btn-primary btn-sm" type="button"
+              (click)="save(name)">Save
+      </button>
+    </div>
+  </form>
 </div>
