--- a/public/app/transaction/transaction-input.component.html
+++ b/public/app/transaction/transaction-input.component.html
@@ -1,10 +1,39 @@
-<div>
-  <transaction-relay #relay></transaction-relay>
-  <input type="text" [(ngModel)]="tnx.date" (keyup.enter)="save()"/>
-  <input type="text" [(ngModel)]="tnx.description" (keyup.enter)="save()"/>
-  <input type="text" [(ngModel)]="tnx.amount" (keyup.enter)="save()"/>
-  <input type="text" [(ngModel)]="tnx.accountId" (keyup.enter)="save()"/>
-  <button type="button" (click)="save()">Save</button>
-  <button type="button" (click)="update()">Update</button>
-  <button type="button" (click)="reset()">Reset</button>
+<transaction-relay #relay></transaction-relay>
+<div class="card card-block">
+  <form class="form-inline">
+    <div class="form-group">
+      <label for="date">Date</label>
+      <input type="date" class="form-control form-control-sm" id="date" name="date"
+             [value]="tnx.date|date:'yyyy-MM-dd'"
+             (input)="tnx.date=parseDate($event.target.value)"
+             (keyup.enter)="save()">
+    </div>
+    <div class="form-group">
+      <label for="desc">Description</label>
+      <input type="text" class="form-control form-control-sm" id="desc" name="desc"
+             [(ngModel)]="tnx.description" (keyup.enter)="save()">
+    </div>
+    <div class="form-group">
+      <label for="amount">Amount</label>
+      <input type="text" class="form-control form-control-sm" id="amount" name="amount"
+             [(ngModel)]="tnx.amount" (keyup.enter)="save()">
+    </div>
+    <div class="form-group">
+      <label for="accId">Account id</label>
+      <input type="text" class="form-control form-control-sm" id="accId" name="accId"
+             [(ngModel)]="tnx.accountId" (keyup.enter)="save()">
+    </div>
+    <div class="form-group">
+      <label>&nbsp;</label>
+      <button class="btn btn-primary btn-sm" type="button"
+              (click)="save()">Save
+      </button>
+      <button class="btn btn-primary btn-sm" type="button"
+              (click)="update()">Update
+      </button>
+      <button class="btn btn-danger btn-sm" type="button"
+              (click)="reset()">Reset
+      </button>
+    </div>
+  </form>
 </div>
