--- a/public/app/transaction/transaction-list.component.html
+++ b/public/app/transaction/transaction-list.component.html
@@ -1,8 +1,64 @@
+<transaction-relay #relay
+                   (transactions)="transactions=$event"
+                   [filter]="filter"></transaction-relay>
+<action-relay #mainAction></action-relay>
+<div class="card">
+  <div class="card-header">
+    Transactions
+    <button class="btn btn-default btn-sm" type="button"
+            (click)="relay.refresh()"><span class="octicon octicon-sync"></span>
+    </button>
+  </div>
+  <div class="card-block">
+    <table class="table table-sm table-hover table-responsive">
+      <thead>
+      <tr>
+        <th class="text-nowrap">
+          <input #mainCb type="checkbox" class="middleAlign"
+                 (click)="mainAction.relay.setAllSelection(mainCb.checked)">
+          <span><button class="btn btn-danger btn-sm" type="button"
+                        style="padding: 0 .2rem"
+                        (click)="mainAction.relay.deleteSelected()">
+              <span class="octicon octicon-x"></span>
+            </button></span>
+        </th>
+        <th class="text-nowrap">Date</th>
+        <th class="text-nowrap" style="width: 100%">Description</th>
+        <th class="text-nowrap">Amount</th>
+        <th class="text-nowrap">Categories</th>
+        <th class="text-nowrap">&nbsp;</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let t of transactions; trackBy: trackById">
+        <td class="text-nowrap">
+          <action-relay #action
+                        (deleteSelected)="remove(t.id(),cb.checked)"
+                        (setAllSelection)="selSvc.set(t.id(),$event)"
+                        (addCategory)="addCategory(t, $event, cb.checked)"
+                        (removeCategory)="removeCategory(t, $event, cb.checked)"></action-relay>
+          <input #cb type="checkbox" [ngModel]="selSvc.isSelected(t.id())"
+                 (ngModelChange)="selSvc.toggle(t.id())">
+        </td>
+        <td class="text-nowrap">{{t.date | date:"yyyy-MM-dd"}}</td>
+        <td class="text-nowrap">{{t.description}}</td>
+        <td class="text-nowrap">{{t.amount}}</td>
+        <td class="text-nowrap">{{t.categories|json}}</td>
+        <td class="text-nowrap">
+          <button class="btn btn-primary btn-sm" type="button"
+                  (click)="action.relay.transaction.edit(t)"><span class="octicon octicon-pencil"></span>
+          </button>
+          <button class="btn btn-danger btn-sm" type="button"
+                  (click)="relay.removeId(t.id())"><span class="octicon octicon-x"></span>
+          </button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
 <div>
-  <transaction-relay #relay
-                     (transactions)="transactions=$event"
-                     [filter]="filter"></transaction-relay>
-  <action-relay #mainAction></action-relay>
 
   <label>Page</label>
   <input type="text" [(ngModel)]="filter.page" (keyup.enter)="relay.sendFilter()"/>
@@ -16,12 +72,9 @@
       [(category)]="filter.category"
       (filtered)="relay.sendFilter()"></transaction-filter>
   <div>
-    <input #mainCb type="checkbox"
-           (click)="mainAction.relay.setAllSelection(mainCb.checked)">
     <button type="button"
             (click)="mainAction.relay.deleteSelected()">Delete
     </button>
-    <button type="button" (click)="relay.refresh()">Refresh</button>
   </div>
   <div>
     <label>Category id:</label>
@@ -31,17 +84,5 @@
   </div>
   <div>
     selected:{{selSvc.selected | async | json}}
-    <div *ngFor="let t of transactions; trackBy: trackById">
-      <action-relay #action
-                    (deleteSelected)="remove(t.id(),cb.checked)"
-                    (setAllSelection)="selSvc.set(t.id(),$event)"
-                    (addCategory)="addCategory(t, $event, cb.checked)"
-                    (removeCategory)="removeCategory(t, $event, cb.checked)"></action-relay>
-      <input #cb type="checkbox" [ngModel]="selSvc.isSelected(t.id())"
-             (ngModelChange)="selSvc.toggle(t.id())">
-      <button type="button" (click)="remove(t.id(),true)">x</button>
-      <button type="button" (click)="action.relay.transaction.edit(t)">edit</button>
-      <span>{{t.id()}} - {{t.description}} - {{t.amount}} - {{t.date}} - {{t.categories|json}}</span>
-    </div>
   </div>
 </div>
