styled more components on transaction page

--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-light bg-faded" style="background-color: #dbe5eb;">
   <div class="nav navbar-nav">
-    <a class="navbar-brand" href="#">Expense manager</a>
+    <a class="navbar-brand" href="#">Expense manager v0.2</a>
     <div class="nav-item">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Features</a>
-      <a class="nav-item nav-link" href="#">Pricing</a>
-      <a class="nav-item nav-link" href="#">About</a>
+      <a class="nav-item nav-link" routerLink="">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" routerLink="">Profile</a>
+      <a class="nav-item nav-link" routerLink="">Settings</a>
+      <a class="nav-item nav-link" routerLink="">About</a>
     </div>
   </div>
 </nav>
